test_suite5/ALAN/test_suite/alan-2022-examples/failing/007660_mutation.alan
source Sv begin while <> do relax end end
